# FATUS-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  config  config.default  doxygen.config  gray-audit-1.md  map.txt  project-outline.md
docs/: README.md
docs/changelogs/: a-0.1.md  a-0.2.md  a-0.3.md  a-1.0.md  b-1.0.md  release-1.0.md
docs/doxygen/html/: annotated.html  annotated_dup.js  assets_8c.html  assets_8c.js  assets_8c__incl.md5  assets_8c_source.html  assets_8h.html  assets_8h.js  assets_8h__dep__incl.md5  assets_8h__incl.md5  assets_8h_source.html  button_8c.html  button_8c.js  button_8c__incl.md5  button_8c_source.html  button_8h.html  button_8h.js  button_8h__dep__incl.md5  button_8h__incl.md5  button_8h_source.html  classes.html  collider_8c.html  collider_8c.js  collider_8c__incl.md5  collider_8c_source.html  collider_8h.html  collider_8h.js  collider_8h__dep__incl.md5  collider_8h__incl.md5  collider_8h_source.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  door_8c.html  door_8c.js  (+237 more)
src/: Makefile  assets.c  button.c  collider.c  door.c  game.c  gameentities.c  gameiaentities.c  gameitems.c  gameitemsentities.c  inventory.c  item.c  map.c  menu.c  minimap.c  objective.c  objectivesnotes.c  pathfinding.c  player.c  program.c  sprite.c
src/includes/: assets.h  button.h  collider.h  door.h  env.h  game.h  gameentities.h  gameiaentities.h  gameitems.h  gameitemsentities.h  inventory.h  item.h  map.h  menu.h  minimap.h  objective.h  objectivesnotes.h  pathfinding.h  player.h  sprite.h
(+110 files in other folders)
